--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,71 @@
 
 header {
   background-color: black;
-  height: 15vh;
+  height: 20vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 headerlogo {
   width: 20vw;
+  color: white;
+}
+header nav {
+  width: 80vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+header nav .buscador {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+main {
+  display: flex;
+  height: 80vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .menu {
+  width: 15vw;
+  height: 100%;
+}
+main .menu nav {
+  padding: 10%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .menu nav a {
+  padding: 5%;
+}
+main .contenido {
+  height: 100%;
+  width: 85vw;
+}
+
+.contenido .generos {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.contenido .generos .genero {
+  margin: 5%;
+}
+
+.canciones-rock {
+  padding: 5%;
+  width: 80%;
+}
+.canciones-rock li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
