--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,8 +1,9 @@
 /*Colores de la pagina*/
 $color_base : #FFF5E4;
-$color_liviano : #FFC4C4;
-$color_mediano : #EE6983;
-$color_oscuro : #850E35;
+$color_liviano : #00C4CC;
+$color_mediano : #4C0BD1;
+$color_oscuro : #121640;
+$color_contraste : #ee3ec9;
 
 
 
