--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,25 +21,14 @@ header{
     background-color: $color_oscuro;
     height: 20vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    &logo {
-        width: 20vw;
+    .logo {
+        width: auto;
+        height: 20vh;
         color: white;    
     }
-    nav{
-        width: 80vw;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-
-        .buscador{
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-end;
-        }
-    }
-    
+ 
 }
 //main en comun 
 main{
@@ -54,14 +43,14 @@ main{
     .menu{
        width: 15vw;
        height: 100%;
-
+       background-color: $color_oscuro; 
        
        nav{
         padding: 10%;
         height: 100%;
         display: flex;
        
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
 
         a{
@@ -71,17 +60,47 @@ main{
        }
 
        
-
     }
     .contenido{
         height: 100%;
         width: 85vw;
     }
+    .cancionesXgenero{
+        width: 80%;
+     
+        height: 100%;
+        width: 85vw;
+        margin-top: 2%;
+      
+        ul{
+            list-style: none;
+            margin-left: 5%;
+            
+            .canciones{
+                
+                width: 85vw;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                
+                margin-bottom: 1%;
+                .item{
+                    width: 50%;
+                    font-size: larger;
+                }
+                
+            
+            }
+        }
+    }
+   
 }
 
 .contenido{
    
     .generos{
+        
+        margin: 0 5%;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
@@ -91,15 +110,40 @@ main{
     }
 }
 
-.canciones-rock{
-    padding: 5%;
+#progress-container{
     width: 80%;
-    li{
-        
-        display: flex;
-        
-        justify-content: space-between;
-        align-items: center;
-    }
+    margin: 0 5%;
+    background-color: $color_oscuro;
+}
 
+#progress{
+    background-color: $color_liviano;
+    width: 0%;
+}
+
+.controles {
+    
+    width: 80%;
+    margin: 0% 5%;
+   
+    justify-content: space-evenly;
+    .boton_playlist{
+        margin: 0 5%;
+        color:white;
+        background-color: $color_contraste;
+        border: white;
+        
+    
+    }   
+    & button{
+        background-color: transparent;
+        border: none;
+        margin: 2%;
+
+        & i {
+            font-size: 1.7rem;
+            color:$color_oscuro
+        }
+      
+    }
 }
