--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -6,4 +6,6 @@ $color_oscuro : #121640;
 $color_contraste : #ee3ec9;
 
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+$main_font: 'Montserrat', sans-serif;
 
