--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,8 @@
 @import 'base/variables';
 
 @import 'login';
+@import 'playlist';
+@import 'registro';
 /* Reseteo */
 * {
     padding: 0%;
@@ -14,7 +16,7 @@
 }
 
 body{
-    background-color: $color_base;
+    background-color: $color_oscuro;
 }
 // header en comun 
 header{
@@ -36,9 +38,10 @@ main{
     display: flex;
     height: 80vh;
     width: 100vw;
-    display: flex;
+    
     justify-content: center;
     align-items: center;
+    background-color: $color_base;
     
     .menu{
        width: 15vw;
@@ -55,6 +58,9 @@ main{
 
         a{
             padding: 5%;
+            font-family: $main_font;
+            font-size: 1.5vw;
+            color: $color_contraste;
         }
         
        }
@@ -62,19 +68,20 @@ main{
        
     }
     .contenido{
-        height: 100%;
+        height: 80vh;
         width: 85vw;
     }
     .cancionesXgenero{
         width: 80%;
-     
+        
         height: 100%;
         width: 85vw;
-        margin-top: 2%;
-      
+        
+            
         ul{
             list-style: none;
             margin-left: 5%;
+            
             
             .canciones{
                 
@@ -83,21 +90,59 @@ main{
                 flex-wrap: wrap;
                 justify-content: space-between;
                 
-                margin-bottom: 1%;
+                margin: 1% 0 ;
                 .item{
                     width: 50%;
                     font-size: larger;
+                    font-family: $main_font;
+                    margin:0.2%;
+                   
+                    
                 }
                 
             
             }
         }
     }
+
+    #canciones_guardadas{
+        width: 80%;
+        
+        height: 100%;
+        width: 85vw;
+        
+          
+            ul{
+                list-style: none;
+                margin-left: 5%;
+                
+                
+                .canciones_playlist{
+                    width: 85vw;
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    
+                    margin: 1% 0 ;
+                    .item-playlist{
+                        width: 50%;
+                        font-size: larger;
+                        font-family: $main_font;
+                        margin:0.2%;
+                        
+                    }
+                    
+                    
+                
+                }
+            }
+    
+    }
    
 }
 
 .contenido{
-   
+   margin-top: 5%;
     .generos{
         
         margin: 0 5%;
@@ -105,7 +150,7 @@ main{
         justify-content: center;
         flex-wrap: wrap;
        .genero{
-        margin: 5%;
+        margin: 1% 5%;
        }
     }
 }
@@ -114,24 +159,37 @@ main{
     width: 80%;
     margin: 0 5%;
     background-color: $color_oscuro;
+    border: solid 1px $color_contraste;
 }
 
 #progress{
-    background-color: $color_liviano;
+    background-color: $color_contraste;
     width: 0%;
 }
 
-.controles {
+
+#reproduccion {
     
-    width: 80%;
-    margin: 0% 5%;
-   
+    width: auto;
+    margin-left: 15vw;
+    padding-top: 2%;
+    height: fit-content;
+    
+    
+    
     justify-content: space-evenly;
-    .boton_playlist{
-        margin: 0 5%;
+    .controles{
+        width: 80%;
+        margin: 0% 5%;
+        justify-content: space-evenly;
+    }
+    .boton_playlist, .eliminar_de_playlist{
+        margin: 1% 5%;
+        
         color:white;
         background-color: $color_contraste;
         border: white;
+        font-family: $main_font;
         
     
     }   
@@ -142,8 +200,9 @@ main{
 
         & i {
             font-size: 1.7rem;
-            color:$color_oscuro
+            color:$color_contraste
         }
       
     }
 }
+
