--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,7 +36,7 @@ header{
 main{
     
     display: flex;
-    height: 80vh;
+    //height: fit-content;
     width: 100vw;
     
     justify-content: center;
@@ -49,6 +49,7 @@ main{
        background-color: $color_oscuro; 
        
        nav{
+        width: 100%;
         padding: 10%;
         height: 100%;
         display: flex;
@@ -68,8 +69,10 @@ main{
        
     }
     .contenido{
-        height: 80vh;
+        height: 100%;
         width: 85vw;
+        
+        
     }
     .cancionesXgenero{
         width: 80%;
@@ -89,7 +92,7 @@ main{
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                
+                height: auto;
                 margin: 1% 0 ;
                 .item{
                     width: 50%;
@@ -105,10 +108,10 @@ main{
         }
     }
 
+
     #canciones_guardadas{
-        width: 80%;
         
-        height: 100%;
+       
         width: 85vw;
         
           
